# Matrix

./: .gitignore  CMakeLists.txt
MatrixEngine/: AppContext.cpp  AppContext.hpp  AppContext_t.hpp  CMakeLists.txt  DateTime.cpp  DateTime.hpp  Debug.cpp  Debug.hpp  Defines.h  FileSystem.cpp  FileSystem.hpp  Matrix.hpp  MatrixEngine.cpp  MatrixEngine.h  Predicates.hpp  RenderContext.cpp  RenderContext.hpp  RenderContext_t.hpp
RenderDemon/: CMakeLists.txt  Devices.hpp  FrameResources.cpp  FrameResources.h  Pipeline.cpp  Pipeline.h  Pipeline.hpp  QueueFamilyIndices.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Surface.hpp  Swapchain.cpp  Swapchain.h  Swapchain.hpp  SwapchainSupportDetails.hpp  VulkanContext.cpp  VulkanContext.h  VulkanContext.hpp  VulkanInstance.hpp  Window.cpp  Window.h  WindowFlags.cpp  WindowFlags.hpp
RenderDemon/Mesh/: Vertex.hpp
RenderDemon/Shaders/: shader.frag  shader.vert
res/Shaders/: base.frag.hlsl  base.vert.hlsl
src/: main.cpp
